Fix index handling in ExprExpression